# scai

./: .gitignore  ARCHITECTURE_COMPLETENESS_SUMMARY.md  ARCHITECTURE_GAPS_ANALYSIS.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_CODE_REVIEW_2024.md  DEEP_ANALYSIS.md  DEEP_CODE_REVIEW_2024.md  FIXES_APPLIED.md  FIXES_APPLIED_2024.md  GIT_COMMIT_SUMMARY.md  GIT_SETUP.md  LLM_COACH_IMPLEMENTATION.md  README.md  REPOSITORY_SIZE_ANALYSIS.md  STOP_TRAINING.md  TOP_LEVEL_AI_ANALYSIS.md  TRAINING_READINESS_ANALYSIS.md  TRAINING_READINESS_CHECKLIST.md  TRAINING_READINESS_FINAL.md  TRAINING_READY_SUMMARY.md  checklist.md  cleanup_repository.sh  大模型总教练.md  方案.md  胡牌规则.md  项目骨架规划.md
rust/: .gitignore  ACTION_MASK_REFINEMENT.md  BUGS_AND_MISSING.md  CALL_TRANSFER_AUDIT.md  CODE_COMPLETION_REVIEW.md  CODE_REVIEW_ISSUES.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_REVIEW.md  Cargo.toml  DETERMINIZATION.md  DISCARD_SEQUENCE_FEATURE.md  FEATURE_ENCODING.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_STATUS.md  FIXES_COMPLETED.md  GANG_REFUND_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_COMPLETE.md  MAX_FAN_SEARCH.md  MAX_FAN_SEARCH_VERIFICATION.md  OBSERVATION_ENCODER.md  ORACLE_FEATURES.md  PASSED_WIN_FIX.md  PASS_HU_LOCK_AUDIT.md  PASS_HU_LOCK_VERIFICATION.md  PASS_HU_THRESHOLD_AUDIT.md  PAYMENT_TRACEABILITY.md  PERFORMANCE.md  PYTHON_BINDINGS.md  README.md  REMAINING_TILES_FEATURE_AUDIT.md  RL_INTERFACE_AUDIT.md  ROOT_COUNTING_BUG.md  ROOT_COUNTING_HAND_AND_MELD.md  SCORING_AUDIT.md  STATE_ACTION_MASKING_AUDIT.md  TESTING.md  TILE_VISIBILITY_FEATURE.md  WIN_LOOKUP_OPTIMIZATION.md  (+3 more)
(+162 files in other folders)
