[package]
name = "scai-engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "scai_engine"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3/extension-module"]

[dependencies]
# PyO3 绑定
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"

# 随机数生成
rand = "0.8"

# 序列化（用于调试和测试）
serde = { version = "1.0", features = ["derive"] }

# 小数组优化
smallvec = "1.11"

# 性能基准测试
criterion = { version = "0.5", features = ["html_reports"] }

# 基准测试配置
[[bench]]
name = "win_check_bench"
harness = false

[[bench]]
name = "scoring_bench"
harness = false

[[bench]]
name = "action_mask_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

